Deserialize structures from disk